# atlas-desktop

./: .gitignore  __init__.py  api_server.py  api_server.py.bak  api_server.py.bak_final  api_server.py.bak_sub  api_server.py.bak_v5  api_server_v3.py  atlas-ws.js  build-script.js  email_utils.py  handlers.py  index.html  package.json  pipeline.py  puzzler_engine.py  quotation_agent.py  requirements.txt  review_criteria.py  tsconfig.json  vite.config.ts  warehouse_agent.py  ws_server.py
agents/: __init__.py  base_agent.py  purchasing_agent.py  purchasing_agent.py.bak_v5  quotation_agent.py  runner.py  trade_agent.py  warehouse_agent.py  warehouse_agent.py.bak_v5
bridge/: agent.py  install.sh  start.sh
bus/: eventbus.py  events.py  handlers.py
config/: __init__.py  app.yaml  plans.yaml  rules.yaml
core/: __init__.py  __init__.py.bak.ftsfix  aliases.py  database.py  importers.py  models.py
crawlers/: __init__.py  alibaba_crawler.py  google_crawler.py  linkedin_crawler.py  reddit_crawler.py  social_crawler.py
data/: atlas-store.json  atlas.db  parts.db  pricing_framework.json  rules.buyer.md  rules.customs.md  rules.developer.md  rules.image.md  rules.md  rules.md.bak.1781757059  rules.puzzler.md  rules.stock.md
forge/: __init__.py  calculator.py  matrix.py  quotation.py  test_quotation.py
ledger/: trace.py
middleware/: __init__.py
models/: __init__.py
oracle/: __init__.py  client.py
portal/: server.js  server.js.bak2  server.js.bak_login  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+64 files in other folders)
